--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Jerry Jones <nevermore.jones@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "jquery": "^3.2.1"
   }
 }
